add paper to submission

--- a/.gitignore
+++ b/.gitignore
@@ -138,3 +138,11 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.gitignore.io/api/linux,python,windows
+
+paper/*.aux
+paper/*.bbl
+paper/*.blg
+paper/*.out
+paper/*.pdf
+paper/*.gz
+paper/*.
